--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
+    <android.support.v7.widget.GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        app:columnCount="3"
+        app:rowCount="3">
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/button10"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:onClick="tileClicked"
+            android:text="Button" />
+
+        <Button
+            android:id="@+id/button11"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:text="Button"
+            app:layout_column="1"
+            app:layout_row="0"
+            android:onClick="tileClicked"/>
+
+        <Button
+            android:id="@+id/button12"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:text="Button"
+            app:layout_column="2"
+            app:layout_row="0"
+            android:onClick="tileClicked"/>
+
+        <Button
+            android:id="@+id/button13"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:text="Button"
+            app:layout_column="0"
+            app:layout_row="1"
+            android:onClick="tileClicked"/>
+
+        <Button
+            android:id="@+id/button14"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:text="Button"
+            app:layout_column="1"
+            app:layout_row="1"
+            android:onClick="tileClicked"/>
+
+        <Button
+            android:id="@+id/button15"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:text="Button"
+            app:layout_column="2"
+            app:layout_row="1"
+            android:onClick="tileClicked"/>
+
+        <Button
+            android:id="@+id/button16"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:text="Button"
+            app:layout_column="0"
+            app:layout_row="2"
+            android:onClick="tileClicked"/>
+
+        <Button
+            android:id="@+id/button17"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:text="Button"
+            app:layout_column="1"
+            app:layout_row="2"
+            android:onClick="tileClicked"/>
+
+        <Button
+            android:id="@+id/button18"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:text="Button"
+            app:layout_column="2"
+            app:layout_row="2"
+            android:onClick="tileClicked"/>
+
+    </android.support.v7.widget.GridLayout>
+
+    <Button
+        android:id="@+id/resetButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:onClick="resetClicked"
+        android:text="@string/Button"
+        tools:text="Reset" />
+</LinearLayout>
