--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:layout_alignParentEnd="true"
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_close_black_24dp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_column="0"
             app:layout_row="0" />
 
@@ -53,6 +53,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:onClick="tileClicked"
+            android:visibility="visible"
             app:layout_column="1"
             app:layout_row="0" />
 
@@ -64,7 +65,7 @@
             android:layout_alignParentEnd="true"
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_close_black_24dp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_column="1"
             app:layout_row="0" />
 
@@ -97,7 +98,7 @@
             android:layout_alignParentEnd="true"
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_close_black_24dp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_column="2"
             app:layout_row="0" />
 
@@ -151,6 +152,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:onClick="tileClicked"
+            android:visibility="visible"
             app:layout_column="1"
             app:layout_row="1" />
 
@@ -162,7 +164,7 @@
             android:layout_alignParentEnd="true"
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_close_black_24dp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_column="1"
             app:layout_row="1" />
 
@@ -183,6 +185,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:onClick="tileClicked"
+            android:visibility="visible"
             app:layout_column="2"
             app:layout_row="1" />
 
@@ -194,7 +197,7 @@
             android:layout_alignParentEnd="true"
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_close_black_24dp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_column="2"
             app:layout_row="1" />
 
@@ -215,6 +218,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:onClick="tileClicked"
+            android:visibility="visible"
             app:layout_column="0"
             app:layout_row="2" />
 
@@ -226,7 +230,7 @@
             android:layout_alignParentEnd="true"
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_close_black_24dp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_column="0"
             app:layout_row="2" />
 
@@ -247,6 +251,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:onClick="tileClicked"
+            android:visibility="visible"
             app:layout_column="1"
             app:layout_row="2" />
 
@@ -258,7 +263,7 @@
             android:layout_alignParentEnd="true"
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_close_black_24dp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_column="1"
             app:layout_row="2" />
 
@@ -279,6 +284,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:onClick="tileClicked"
+            android:visibility="visible"
             app:layout_column="2"
             app:layout_row="2" />
 
@@ -290,7 +296,7 @@
             android:layout_alignParentEnd="true"
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_close_black_24dp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_column="2"
             app:layout_row="2" />
 
@@ -314,6 +320,5 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:onClick="resetClicked"
-        android:text="@string/Button"
-        tools:text="Reset" />
+        tools:text="New Game" />
 </LinearLayout>
